fix tab-buttons to inline for safari; animate show/hide of new content on tab 1

--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
         <p>Hello world! This is HTML5 Boilerplate.</p>
 		
 		<div class="top-tab-bar">
-			<div id="tab-button1" class="tab-button">
+			<span id="tab-button1" class="tab-button">
 			button
-			</div>
+			</span>
 		
-			<div id="tab-button2" class="tab-button">
+			<span id="tab-button2" class="tab-button">
 				button	
-			</div>
-			<div id="tab-button3" class="tab-button">
+			</span>
+			<span id="tab-button3" class="tab-button">
 				button			
-			</div>
-			<div id="tab-button4" class="tab-button">
+			</span>
+			<span id="tab-button4" class="tab-button">
 				button			
-			</div>
+			</span>
 		</div>
 		
 		
