zoom image feature on 4th tab

--- a/index.html
+++ b/index.html
@@ -61,13 +61,15 @@
 
 <div id="flickrfeed">
 	Flickr feed
-	
 	<button id="flickrGet" class="button">GET</button>
-	
 	<div id="flickrfeedContent"></div>	
-	
-	
-	
+</div>
+
+<div id="feature4">
+Zoom the image with your mouse	
+	<div id="zoomControl"></div>
+	<div id="zoomPic"></div>
+
 </div>
 		
 
